# HttpServer

./: CMakeLists.txt  Dockerfile  httpd.conf  main.cpp
worker/: worker.cpp  worker.h
worker/clientmanager/: clientmanager.cpp  clientmanager.h
worker/clientmanager/Pool/: ObjectPool.h
worker/clientmanager/client/: client.cpp  client.h
worker/clientmanager/client/request/: request.cpp  request.h
worker/clientmanager/client/response/: response.cpp  response.h
worker/clientmanager/client/response/ResponseFiles/: ResponceFiles.cpp  ResponceFiles.h
worker/clientmanager/client/response/ResponseHeaders/: response_obj.cpp  response_obj.h
