cmake_minimum_required(VERSION 3.8)
project(fst)
set(CMAKE_CXX_COMPILER=/usr/bin/gcc-6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_CXX_STANDARD 17)
set(SOURCE_FILES main.cpp worker/worker.cpp worker/worker.h worker/clientmanager/client/client.cpp worker/clientmanager/client/client.h worker/clientmanager/client/request/request.cpp worker/clientmanager/client/request/request.h worker/clientmanager/clientmanager.cpp worker/clientmanager/clientmanager.h worker/clientmanager/client/response/response.cpp worker/clientmanager/client/response/response.h worker/clientmanager/client/response/ResponseHeaders/response_obj.cpp worker/clientmanager/client/response/ResponseHeaders/response_obj.h worker/clientmanager/client/response/ResponseFiles/ResponceFiles.cpp worker/clientmanager/client/response/ResponseFiles/ResponceFiles.h)
add_executable(fst ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} stdc++fs)
